adding margin for h1 and changed the font size to rem

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
   <div class="middle-container">
     <div class="profile">
-      <img src="images/DSC03351.png" alt="ken-image" width="200" height="200">
+      <img class="self_img" src="images/DSC03351.png" alt="ken-image" width="200" height="200">
       <h2>Hello.</h2>
       <p>I'm an experience sales trader with decade of experience in global market.</p>
     </div>
@@ -57,9 +57,7 @@
     <p>© 2018 Name Surname.</p>
   </div>
 
-<div class="">
-  test
-</div>
+
 </body>
 
 </html>
